--- a/Elastification/Client/Client.html
+++ b/Elastification/Client/Client.html
@@ -54,7 +54,7 @@ It serves as a kind of command pattern talking to a transport facade.</p>
                 </td>
                 <td class="last">
                     <a href="#method_send">send</a>(<a href="../../Elastification/Client/Request/RequestInterface.html"><abbr title="Elastification\Client\Request\RequestInterface">RequestInterface</abbr></a> $request)
-                    <p>Sends the request through the configured transport.</p>
+                    <p>performs sending the request</p>
                 </td>
                 <td></td>
             </tr>
@@ -64,7 +64,8 @@ It serves as a kind of command pattern talking to a transport facade.</p>
                 </td>
                 <td class="last">
                     <a href="#method_getRequest">getRequest</a>(string $name)
-                    <p>Gets a predefined and registered request.</p>
+                    <p>
+</p>
                 </td>
                 <td></td>
             </tr>
@@ -74,7 +75,7 @@ It serves as a kind of command pattern talking to a transport facade.</p>
         <h2>Details</h2>
 
                         <h3 id="method___construct">
-        <div class="location">at line 47</div>
+        <div class="location">at line 64</div>
         <code>            public            
     <strong>__construct</strong>(<a href="../../Elastification/Client/Transport/TransportInterface.html"><abbr title="Elastification\Client\Transport\TransportInterface">TransportInterface</abbr></a> $transport, <a href="../../Elastification/Client/Request/RequestManagerInterface.html"><abbr title="Elastification\Client\Request\RequestManagerInterface">RequestManagerInterface</abbr></a> $requestManager, null|string $elasticsearchVersion = null)</code>
     </h3>
@@ -113,12 +114,12 @@ It serves as a kind of command pattern talking to a transport facade.</p>
     </div>
 
                 <h3 id="method_send">
-        <div class="location">at line 73</div>
+        <div class="location">at line 89</div>
         <code>            public            <a href="../../Elastification/Client/Response/ResponseInterface.html"><abbr title="Elastification\Client\Response\ResponseInterface">ResponseInterface</abbr></a>
     <strong>send</strong>(<a href="../../Elastification/Client/Request/RequestInterface.html"><abbr title="Elastification\Client\Request\RequestInterface">RequestInterface</abbr></a> $request)</code>
     </h3>
     <div class="details">
-        <p>Sends the request through the configured transport.</p>
+        <p>performs sending the request</p>
         <p>
 </p>
         <div class="tags">
@@ -165,12 +166,13 @@ It serves as a kind of command pattern talking to a transport facade.</p>
     </div>
 
                 <h3 id="method_getRequest">
-        <div class="location">at line 108</div>
+        <div class="location">at line 149</div>
         <code>            public            <a href="../../Elastification/Client/Request/RequestInterface.html"><abbr title="Elastification\Client\Request\RequestInterface">RequestInterface</abbr></a>
     <strong>getRequest</strong>(string $name)</code>
     </h3>
     <div class="details">
-        <p>Gets a predefined and registered request.</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
