--- a/Elastification/Client/ClientVersionMap.html
+++ b/Elastification/Client/ClientVersionMap.html
@@ -28,8 +28,9 @@
 
             <div class="description">
             <p>The version map.</p>
-            <p>Elastification's php client support the use of multiple elasticsearch versions.
-This class shows all supported versions and their mapping to our version command
+            <p>Elastification's php client support the use of multiple elasticsearch versions.</p>
+
+<p>This class shows all supported versions and their mapping to our version command
 namespaces/folders.</p>
         </div>
     
@@ -54,7 +55,7 @@ namespaces/folders.</p>
         <h2>Details</h2>
 
                         <h3 id="method_getVersion">
-        <div class="location">at line 36</div>
+        <div class="location">at line 51</div>
         <code>        static    public            string
     <strong>getVersion</strong>(string $version)</code>
     </h3>
