--- a/Elastification/Client/Request/RequestMethods.html
+++ b/Elastification/Client/Request/RequestMethods.html
@@ -71,6 +71,15 @@
 </p>
                 </td>
             </tr>
+                    <tr>
+                <td>HEAD</td>
+                <td class="last">
+                    <p><em>
+</em></p>
+                    <p>
+</p>
+                </td>
+            </tr>
             </table>
 
     
@@ -94,7 +103,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_isAllowed">
-        <div class="location">at line 34</div>
+        <div class="location">at line 53</div>
         <code>        static    public            bool
     <strong>isAllowed</strong>(string $method)</code>
     </h3>
