--- a/Elastification/Client/Request/V1x/SearchRequest.html
+++ b/Elastification/Client/Request/V1x/SearchRequest.html
@@ -63,7 +63,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getIndex">getIndex</a>()
-                    <p>Gets the elasticsearch index</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getIndex"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -73,7 +74,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getType">getType</a>()
-                    <p>Gets the elasticsearch type</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getType"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -83,7 +85,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getSerializer">getSerializer</a>()
-                    <p>Gets the serializer</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializer"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -93,7 +96,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getSerializerParams">getSerializerParams</a>()
-                    <p>Gets the serializer params</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializerParams"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -103,7 +107,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getMethod">getMethod</a>()
-                    <p>Gets the request method</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getMethod"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a></small></td>
             </tr>
@@ -113,7 +118,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getAction">getAction</a>()
-                    <p>Gets the elasticsearch action/endpoint like (_search, _mapping)</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getAction"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a></small></td>
             </tr>
@@ -123,7 +129,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getBody">getBody</a>()
-                    <p>get the body</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getBody"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a></small></td>
             </tr>
@@ -133,13 +140,14 @@
                 </td>
                 <td class="last">
                     <a href="#method_setBody">setBody</a>(mixed $body)
-                    <p>before setting data it should be serialized</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_setBody"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a></small></td>
             </tr>
                     <tr>
                 <td class="type">
-                    <a href="../../../../Elastification/Client/Response/V1x/DocumentResponse.html"><abbr title="Elastification\Client\Response\V1x\DocumentResponse">DocumentResponse</abbr></a>
+                    <a href="../../../../Elastification/Client/Response/V1x/SearchResponse.html"><abbr title="Elastification\Client\Response\V1x\SearchResponse">SearchResponse</abbr></a>
                 </td>
                 <td class="last">
                     <a href="#method_createResponse">createResponse</a>(string $rawData, <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a> $serializer, array $serializerParams = array())
@@ -164,7 +172,7 @@
         <h2>Details</h2>
 
                         <h3 id="method___construct">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method___construct"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 48</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method___construct"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 59</div>
         <code>            public            
     <strong>__construct</strong>(string $index, string $type, <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a> $serializer, array $serializerParams = array())</code>
     </h3>
@@ -210,12 +218,13 @@
     </div>
 
                 <h3 id="method_getIndex">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getIndex"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 65</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getIndex"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 76</div>
         <code>            public            null|string
     <strong>getIndex</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the elasticsearch index</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -236,12 +245,13 @@
     </div>
 
                 <h3 id="method_getType">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getType"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 73</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getType"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 84</div>
         <code>            public            null|string
     <strong>getType</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the elasticsearch type</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -262,12 +272,13 @@
     </div>
 
                 <h3 id="method_getSerializer">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializer"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 82</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializer"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 93</div>
         <code>            public            <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a>
     <strong>getSerializer</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the serializer</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -288,12 +299,13 @@
     </div>
 
                 <h3 id="method_getSerializerParams">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializerParams"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 90</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializerParams"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 101</div>
         <code>            public            array
     <strong>getSerializerParams</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the serializer params</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -314,12 +326,13 @@
     </div>
 
                 <h3 id="method_getMethod">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getMethod"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 30</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getMethod"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 40</div>
         <code>            public            string
     <strong>getMethod</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the request method</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -340,12 +353,13 @@
     </div>
 
                 <h3 id="method_getAction">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getAction"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 38</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getAction"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 48</div>
         <code>            public            null|string
     <strong>getAction</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the elasticsearch action/endpoint like (_search, _mapping)</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -366,12 +380,13 @@
     </div>
 
                 <h3 id="method_getBody">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getBody"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 46</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_getBody"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 56</div>
         <code>            public            mixed
     <strong>getBody</strong>()</code>
     </h3>
     <div class="details">
-        <p>get the body</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -392,12 +407,13 @@
     </div>
 
                 <h3 id="method_setBody">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_setBody"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 54</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractSearchRequest.html#method_setBody"><abbr title="Elastification\Client\Request\Shared\AbstractSearchRequest">AbstractSearchRequest</abbr></a> at line 64</div>
         <code>            public            void
     <strong>setBody</strong>(mixed $body)</code>
     </h3>
     <div class="details">
-        <p>before setting data it should be serialized</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -424,23 +440,13 @@
     </table>
 
             
-                            <h4>Exceptions</h4>
-
-                    <table>
-                    <tr>
-                <td><a href="../../../../Elastification/Client/Exception/RequestException.html"><abbr title="Elastification\Client\Exception\RequestException">RequestException</abbr></a></td>
-                <td>
-</td>
-            </tr>
-            </table>
-
             
                     </div>
     </div>
 
                 <h3 id="method_createResponse">
-        <div class="location">at line 24</div>
-        <code>            public            <a href="../../../../Elastification/Client/Response/V1x/DocumentResponse.html"><abbr title="Elastification\Client\Response\V1x\DocumentResponse">DocumentResponse</abbr></a>
+        <div class="location">at line 33</div>
+        <code>            public            <a href="../../../../Elastification/Client/Response/V1x/SearchResponse.html"><abbr title="Elastification\Client\Response\V1x\SearchResponse">SearchResponse</abbr></a>
     <strong>createResponse</strong>(string $rawData, <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a> $serializer, array $serializerParams = array())</code>
     </h3>
     <div class="details">
@@ -477,7 +483,7 @@
 
                     <table>
         <tr>
-            <td><a href="../../../../Elastification/Client/Response/V1x/DocumentResponse.html"><abbr title="Elastification\Client\Response\V1x\DocumentResponse">DocumentResponse</abbr></a></td>
+            <td><a href="../../../../Elastification/Client/Response/V1x/SearchResponse.html"><abbr title="Elastification\Client\Response\V1x\SearchResponse">SearchResponse</abbr></a></td>
             <td>
 </td>
         </tr>
@@ -489,7 +495,7 @@
     </div>
 
                 <h3 id="method_getSupportedClass">
-        <div class="location">at line 37</div>
+        <div class="location">at line 46</div>
         <code>            public            string
     <strong>getSupportedClass</strong>()</code>
     </h3>
