--- a/Elastification/Client/Serializer/Gateway/GatewayInterface.html
+++ b/Elastification/Client/Serializer/Gateway/GatewayInterface.html
@@ -33,7 +33,7 @@
 layer to access things like the response time ("took") and to get to know if the request went well, etc.</p>
 
 <p>The gateway is not meant to be used outside of the ecosystem of the client. Use the
-{see Elastification\Client\Serializer\Gateway\GatewayInterface#getGatewayValue} method to get the real, un-managed
+GatewayInterface#getGatewayValue method to get the real, un-managed
 result of your chosen serializer.</p>
 
 <p>For performance reasons you should call this method as soon as possible in your code and work with the real result.</p>
@@ -60,7 +60,7 @@ result of your chosen serializer.</p>
         <h2>Details</h2>
 
                         <h3 id="method_getGatewayValue">
-        <div class="location">at line 25</div>
+        <div class="location">at line 43</div>
         <code>            public            mixed
     <strong>getGatewayValue</strong>()</code>
     </h3>
