--- a/Elastification/Client/Transport/HttpGuzzle/GuzzleTransport.html
+++ b/Elastification/Client/Transport/HttpGuzzle/GuzzleTransport.html
@@ -72,7 +72,7 @@
         <h2>Details</h2>
 
                         <h3 id="method___construct">
-        <div class="location">at line 24</div>
+        <div class="location">at line 39</div>
         <code>            public            
     <strong>__construct</strong>(<abbr title="GuzzleHttp\ClientInterface">ClientInterface</abbr> $guzzleClient)</code>
     </h3>
@@ -100,7 +100,7 @@
     </div>
 
                 <h3 id="method_createRequest">
-        <div class="location">at line 35</div>
+        <div class="location">at line 50</div>
         <code>            public            <a href="../../../../Elastification/Client/Transport/TransportRequestInterface.html"><abbr title="Elastification\Client\Transport\TransportRequestInterface">TransportRequestInterface</abbr></a>
     <strong>createRequest</strong>(string $httpMethod)</code>
     </h3>
@@ -137,7 +137,7 @@
     </div>
 
                 <h3 id="method_send">
-        <div class="location">at line 47</div>
+        <div class="location">at line 62</div>
         <code>            public            <a href="../../../../Elastification/Client/Transport/TransportResponseInterface.html"><abbr title="Elastification\Client\Transport\TransportResponseInterface">TransportResponseInterface</abbr></a>
     <strong>send</strong>(<a href="../../../../Elastification/Client/Transport/TransportRequestInterface.html"><abbr title="Elastification\Client\Transport\TransportRequestInterface">TransportRequestInterface</abbr></a> $request)</code>
     </h3>
@@ -169,6 +169,16 @@
     </table>
 
             
+                            <h4>Exceptions</h4>
+
+                    <table>
+                    <tr>
+                <td><a href="../../../../Elastification/Client/Exception/ClientException.html"><abbr title="Elastification\Client\Exception\ClientException">ClientException</abbr></a></td>
+                <td>
+</td>
+            </tr>
+            </table>
+
             
                     </div>
     </div>
