--- a/Elastification/Client/Transport/Thrift/ThriftTransport.html
+++ b/Elastification/Client/Transport/Thrift/ThriftTransport.html
@@ -28,9 +28,8 @@
         <a href="../../../../Elastification/Client/Transport/TransportInterface.html"><abbr title="Elastification\Client\Transport\TransportInterface">TransportInterface</abbr></a></p>
 
             <div class="description">
-            <p>${CARET}</p>
-            <p>
-</p>
+            <p>Thrift transport implementation.</p>
+            <p>This needs the elasticsearch thrift plugin to be installed on the server side.</p>
         </div>
     
     
@@ -77,7 +76,7 @@
         <h2>Details</h2>
 
                         <h3 id="method___construct">
-        <div class="location">at line 27</div>
+        <div class="location">at line 43</div>
         <code>            public            
     <strong>__construct</strong>(<abbr title="Elasticsearch\RestClient">RestClient</abbr> $thriftClient)</code>
     </h3>
@@ -105,7 +104,7 @@
     </div>
 
                 <h3 id="method_createRequest">
-        <div class="location">at line 37</div>
+        <div class="location">at line 53</div>
         <code>            public            <a href="../../../../Elastification/Client/Transport/TransportRequestInterface.html"><abbr title="Elastification\Client\Transport\TransportRequestInterface">TransportRequestInterface</abbr></a>
     <strong>createRequest</strong>(string $httpMethod)</code>
     </h3>
@@ -142,7 +141,7 @@
     </div>
 
                 <h3 id="method_send">
-        <div class="location">at line 47</div>
+        <div class="location">at line 63</div>
         <code>            public            <a href="../../../../Elastification/Client/Transport/TransportResponseInterface.html"><abbr title="Elastification\Client\Transport\TransportResponseInterface">TransportResponseInterface</abbr></a>
     <strong>send</strong>(<a href="../../../../Elastification/Client/Transport/TransportRequestInterface.html"><abbr title="Elastification\Client\Transport\TransportRequestInterface">TransportRequestInterface</abbr></a> $request)</code>
     </h3>
