--- a/classes.html
+++ b/classes.html
@@ -170,6 +170,38 @@
             </tr>
                     <tr>
                 <td>
+                                        <a href="Elastification/Client/Request/Shared/Index/AbstractCreateIndexRequest.html" target="main"><abbr title="Elastification\Client\Request\Shared\Index\AbstractCreateIndexRequest">Elastification\Client\Request\Shared\Index\AbstractCreateIndexRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class AbstractCreateIndexRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/Shared/Index/AbstractDeleteIndexRequest.html" target="main"><abbr title="Elastification\Client\Request\Shared\Index\AbstractDeleteIndexRequest">Elastification\Client\Request\Shared\Index\AbstractDeleteIndexRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class AbstractDeleteIndexRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/Shared/Index/AbstractIndexExistsRequest.html" target="main"><abbr title="Elastification\Client\Request\Shared\Index\AbstractIndexExistsRequest">Elastification\Client\Request\Shared\Index\AbstractIndexExistsRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class AbstractIndexExists
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/Shared/Index/AbstractRefreshIndexRequest.html" target="main"><abbr title="Elastification\Client\Request\Shared\Index\AbstractRefreshIndexRequest">Elastification\Client\Request\Shared\Index\AbstractRefreshIndexRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class AbstractRefreshIndexRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
                                         <a href="Elastification/Client/Request/V090x/CreateDocumentRequest.html" target="main"><abbr title="Elastification\Client\Request\V090x\CreateDocumentRequest">Elastification\Client\Request\V090x\CreateDocumentRequest</abbr></a>
                                     </td>
                 <td>
@@ -198,6 +230,38 @@
                                     </td>
                 <td>
                     Class GetMappingRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/V090x/Index/CreateIndexRequest.html" target="main"><abbr title="Elastification\Client\Request\V090x\Index\CreateIndexRequest">Elastification\Client\Request\V090x\Index\CreateIndexRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class CreateIndexRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/V090x/Index/DeleteIndexRequest.html" target="main"><abbr title="Elastification\Client\Request\V090x\Index\DeleteIndexRequest">Elastification\Client\Request\V090x\Index\DeleteIndexRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class DeleteIndexRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/V090x/Index/IndexExistsRequest.html" target="main"><abbr title="Elastification\Client\Request\V090x\Index\IndexExistsRequest">Elastification\Client\Request\V090x\Index\IndexExistsRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class CreateDocumentRequest
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Request/V090x/Index/RefreshIndexRequest.html" target="main"><abbr title="Elastification\Client\Request\V090x\Index\RefreshIndexRequest">Elastification\Client\Request\V090x\Index\RefreshIndexRequest</abbr></a>
+                                    </td>
+                <td>
+                    Class RefreshIndexRequest
                 </td>
             </tr>
                     <tr>
@@ -307,6 +371,22 @@
                                     </td>
                 <td>
                     Class DocumentResponse
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Response/V090x/Index/IndexResponse.html" target="main"><abbr title="Elastification\Client\Response\V090x\Index\IndexResponse">Elastification\Client\Response\V090x\Index\IndexResponse</abbr></a>
+                                    </td>
+                <td>
+                    Class CreateUpdateDocumentResponse
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Response/V090x/Index/RefreshIndexResponse.html" target="main"><abbr title="Elastification\Client\Response\V090x\Index\RefreshIndexResponse">Elastification\Client\Response\V090x\Index\RefreshIndexResponse</abbr></a>
+                                    </td>
+                <td>
+                    Class RefreshIndexResponse
                 </td>
             </tr>
                     <tr>
@@ -497,7 +577,15 @@
             </tr>
                     <tr>
                 <td>
-                                        <a href="Elastification/Client/Transport/Thrift/ThriftConnectionFactory.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftConnectionFactory">Elastification\Client\Transport\Thrift\ThriftConnectionFactory</abbr></a>
+                                        <a href="Elastification/Client/Transport/Thrift/ThriftTransport.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftTransport">Elastification\Client\Transport\Thrift\ThriftTransport</abbr></a>
+                                    </td>
+                <td>
+                    Thrift transport implementation.
+                </td>
+            </tr>
+                    <tr>
+                <td>
+                                        <a href="Elastification/Client/Transport/Thrift/ThriftTransportConnectionFactory.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftTransportConnectionFactory">Elastification\Client\Transport\Thrift\ThriftTransportConnectionFactory</abbr></a>
                                     </td>
                 <td>
                     Factory class to create a thrift connection.
@@ -505,7 +593,7 @@
             </tr>
                     <tr>
                 <td>
-                                        <a href="Elastification/Client/Transport/Thrift/ThriftRequest.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftRequest">Elastification\Client\Transport\Thrift\ThriftRequest</abbr></a>
+                                        <a href="Elastification/Client/Transport/Thrift/ThriftTransportRequest.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftTransportRequest">Elastification\Client\Transport\Thrift\ThriftTransportRequest</abbr></a>
                                     </td>
                 <td>
                     
@@ -514,19 +602,11 @@
             </tr>
                     <tr>
                 <td>
-                                        <a href="Elastification/Client/Transport/Thrift/ThriftResponse.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftResponse">Elastification\Client\Transport\Thrift\ThriftResponse</abbr></a>
+                                        <a href="Elastification/Client/Transport/Thrift/ThriftTransportResponse.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftTransportResponse">Elastification\Client\Transport\Thrift\ThriftTransportResponse</abbr></a>
                                     </td>
                 <td>
                     
 
-                </td>
-            </tr>
-                    <tr>
-                <td>
-                                        <a href="Elastification/Client/Transport/Thrift/ThriftTransport.html" target="main"><abbr title="Elastification\Client\Transport\Thrift\ThriftTransport">Elastification\Client\Transport\Thrift\ThriftTransport</abbr></a>
-                                    </td>
-                <td>
-                    ${CARET}
                 </td>
             </tr>
                     <tr>
