--- a/namespaces.html
+++ b/namespaces.html
@@ -39,7 +39,13 @@
                 <td><a href="Elastification/Client/Request/Shared.html">Elastification\Client\Request\Shared</a></td>
             </tr>
                     <tr>
+                <td><a href="Elastification/Client/Request/Shared/Index.html">Elastification\Client\Request\Shared\Index</a></td>
+            </tr>
+                    <tr>
                 <td><a href="Elastification/Client/Request/V090x.html">Elastification\Client\Request\V090x</a></td>
+            </tr>
+                    <tr>
+                <td><a href="Elastification/Client/Request/V090x/Index.html">Elastification\Client\Request\V090x\Index</a></td>
             </tr>
                     <tr>
                 <td><a href="Elastification/Client/Request/V1x.html">Elastification\Client\Request\V1x</a></td>
@@ -52,6 +58,9 @@
             </tr>
                     <tr>
                 <td><a href="Elastification/Client/Response/V090x.html">Elastification\Client\Response\V090x</a></td>
+            </tr>
+                    <tr>
+                <td><a href="Elastification/Client/Response/V090x/Index.html">Elastification\Client\Response\V090x\Index</a></td>
             </tr>
                     <tr>
                 <td><a href="Elastification/Client/Response/V1x.html">Elastification\Client\Response\V1x</a></td>
