--- a/Elastification/Client/Request/V1x/DeleteDocumentRequest.html
+++ b/Elastification/Client/Request/V1x/DeleteDocumentRequest.html
@@ -49,7 +49,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getIndex">getIndex</a>()
-                    <p>Gets the elasticsearch index</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getIndex"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -59,7 +60,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getType">getType</a>()
-                    <p>Gets the elasticsearch type</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getType"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -69,7 +71,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getSerializer">getSerializer</a>()
-                    <p>Gets the serializer</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializer"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -79,7 +82,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getSerializerParams">getSerializerParams</a>()
-                    <p>Gets the serializer params</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializerParams"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a></small></td>
             </tr>
@@ -89,7 +93,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getMethod">getMethod</a>()
-                    <p>Gets the request method</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getMethod"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a></small></td>
             </tr>
@@ -99,7 +104,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getAction">getAction</a>()
-                    <p>Gets the elasticsearch action/endpoint like (_search, _mapping)</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getAction"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a></small></td>
             </tr>
@@ -109,7 +115,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_getBody">getBody</a>()
-                    <p>get the body</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getBody"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a></small></td>
             </tr>
@@ -119,7 +126,8 @@
                 </td>
                 <td class="last">
                     <a href="#method_setBody">setBody</a>(mixed $body)
-                    <p>before setting data it should be serialized</p>
+                    <p>
+</p>
                 </td>
                 <td><small>from&nbsp;<a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_setBody"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a></small></td>
             </tr>
@@ -136,7 +144,7 @@
             </tr>
                     <tr>
                 <td class="type">
-                    null|<a href="../../../../Elastification/Client/Response/ResponseInterface.html"><abbr title="Elastification\Client\Response\ResponseInterface">ResponseInterface</abbr></a>
+                    <a href="../../../../Elastification/Client/Response/V1x/DeleteDocumentResponse.html"><abbr title="Elastification\Client\Response\V1x\DeleteDocumentResponse">DeleteDocumentResponse</abbr></a>
                 </td>
                 <td class="last">
                     <a href="#method_createResponse">createResponse</a>(string $rawData, <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a> $serializer, array $serializerParams = array())
@@ -161,7 +169,7 @@
         <h2>Details</h2>
 
                         <h3 id="method___construct">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method___construct"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 48</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method___construct"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 59</div>
         <code>            public            
     <strong>__construct</strong>(string $index, string $type, <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a> $serializer, array $serializerParams = array())</code>
     </h3>
@@ -207,12 +215,13 @@
     </div>
 
                 <h3 id="method_getIndex">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getIndex"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 65</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getIndex"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 76</div>
         <code>            public            null|string
     <strong>getIndex</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the elasticsearch index</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -233,12 +242,13 @@
     </div>
 
                 <h3 id="method_getType">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getType"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 73</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getType"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 84</div>
         <code>            public            null|string
     <strong>getType</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the elasticsearch type</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -259,12 +269,13 @@
     </div>
 
                 <h3 id="method_getSerializer">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializer"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 82</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializer"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 93</div>
         <code>            public            <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a>
     <strong>getSerializer</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the serializer</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -285,12 +296,13 @@
     </div>
 
                 <h3 id="method_getSerializerParams">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializerParams"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 90</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractBaseRequest.html#method_getSerializerParams"><abbr title="Elastification\Client\Request\Shared\AbstractBaseRequest">AbstractBaseRequest</abbr></a> at line 101</div>
         <code>            public            array
     <strong>getSerializerParams</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the serializer params</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -311,12 +323,13 @@
     </div>
 
                 <h3 id="method_getMethod">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getMethod"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 29</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getMethod"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 39</div>
         <code>            public            string
     <strong>getMethod</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the request method</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -337,12 +350,13 @@
     </div>
 
                 <h3 id="method_getAction">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getAction"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 37</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getAction"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 47</div>
         <code>            public            null|string
     <strong>getAction</strong>()</code>
     </h3>
     <div class="details">
-        <p>Gets the elasticsearch action/endpoint like (_search, _mapping)</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -363,12 +377,13 @@
     </div>
 
                 <h3 id="method_getBody">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getBody"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 49</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_getBody"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 59</div>
         <code>            public            mixed
     <strong>getBody</strong>()</code>
     </h3>
     <div class="details">
-        <p>get the body</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -389,12 +404,13 @@
     </div>
 
                 <h3 id="method_setBody">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_setBody"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 57</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_setBody"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 67</div>
         <code>            public            void
     <strong>setBody</strong>(mixed $body)</code>
     </h3>
     <div class="details">
-        <p>before setting data it should be serialized</p>
+        <p>
+</p>
         <p>
 </p>
         <div class="tags">
@@ -421,22 +437,12 @@
     </table>
 
             
-                            <h4>Exceptions</h4>
-
-                    <table>
-                    <tr>
-                <td><a href="../../../../Elastification/Client/Exception/RequestException.html"><abbr title="Elastification\Client\Exception\RequestException">RequestException</abbr></a></td>
-                <td>
-</td>
-            </tr>
-            </table>
-
             
                     </div>
     </div>
 
                 <h3 id="method_setId">
-        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_setId"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 64</div>
+        <div class="location">in <a href="../../../../Elastification/Client/Request/Shared/AbstractDeleteDocumentRequest.html#method_setId"><abbr title="Elastification\Client\Request\Shared\AbstractDeleteDocumentRequest">AbstractDeleteDocumentRequest</abbr></a> at line 75</div>
         <code>            public            
     <strong>setId</strong>($id)</code>
     </h3>
@@ -464,8 +470,8 @@
     </div>
 
                 <h3 id="method_createResponse">
-        <div class="location">at line 24</div>
-        <code>            public            null|<a href="../../../../Elastification/Client/Response/ResponseInterface.html"><abbr title="Elastification\Client\Response\ResponseInterface">ResponseInterface</abbr></a>
+        <div class="location">at line 32</div>
+        <code>            public            <a href="../../../../Elastification/Client/Response/V1x/DeleteDocumentResponse.html"><abbr title="Elastification\Client\Response\V1x\DeleteDocumentResponse">DeleteDocumentResponse</abbr></a>
     <strong>createResponse</strong>(string $rawData, <a href="../../../../Elastification/Client/Serializer/SerializerInterface.html"><abbr title="Elastification\Client\Serializer\SerializerInterface">SerializerInterface</abbr></a> $serializer, array $serializerParams = array())</code>
     </h3>
     <div class="details">
@@ -502,7 +508,7 @@
 
                     <table>
         <tr>
-            <td>null|<a href="../../../../Elastification/Client/Response/ResponseInterface.html"><abbr title="Elastification\Client\Response\ResponseInterface">ResponseInterface</abbr></a></td>
+            <td><a href="../../../../Elastification/Client/Response/V1x/DeleteDocumentResponse.html"><abbr title="Elastification\Client\Response\V1x\DeleteDocumentResponse">DeleteDocumentResponse</abbr></a></td>
             <td>
 </td>
         </tr>
@@ -514,7 +520,7 @@
     </div>
 
                 <h3 id="method_getSupportedClass">
-        <div class="location">at line 37</div>
+        <div class="location">at line 45</div>
         <code>            public            string
     <strong>getSupportedClass</strong>()</code>
     </h3>
